<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/home"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#090E05"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/rectangle_2"
        android:layout_width="410dp"
        android:layout_height="316dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/rectangle22"
        tools:ignore="MissingConstraints" />

    <FrameLayout
        android:id="@+id/frame_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <RelativeLayout
            android:id="@+id/align_left"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/align_left"
            android:layout_marginStart="16dp"
            android:layout_marginTop="0dp" />
        <TextView
            android:id="@+id/hi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="0dp"
            android:text="@string/hi"
            android:textAppearance="@style/hi"
            android:gravity="top" />

        <RelativeLayout
            android:id="@+id/bell"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/bell"
            android:layout_gravity="end" />
    </FrameLayout>

    <!-- Search Box Container -->
    <RelativeLayout
        android:id="@+id/search_box"
        android:layout_width="343dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        app:layout_constraintTop_toBottomOf="@id/frame_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/rectangle_3"
            android:layout_width="343dp"
            android:layout_height="48dp"
            android:background="@drawable/rectangle_3"
            android:hint="@string/search"
            android:textColorHint="@color/white"
            android:paddingStart="56dp"
            android:paddingEnd="24dp" />

        <RelativeLayout
            android:id="@+id/ic_search"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_search" />

    </RelativeLayout>

    <!-- about flower -->
    <RelativeLayout
        android:id="@+id/about_flower"
        android:layout_width="343dp"
        android:layout_height="147dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="29dp"
        app:layout_constraintTop_toBottomOf="@id/search_box"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/know_about_"
            android:layout_width="170dp"
            android:layout_height="27dp"
            android:layout_alignParentTop="true"
            android:text="@string/know_about_"
            android:textAppearance="@style/know_about_"
            android:gravity="top"
            />

        <View
            android:id="@+id/flower_1"
            android:layout_width="104dp"
            android:layout_height="104dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="43dp"
            android:background="@drawable/rose_1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground" />

        <View
            android:id="@+id/flower_2"
            android:layout_width="104dp"
            android:layout_height="104dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="120dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="43dp"
            android:background="@drawable/orchid_1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground" />

        <View
            android:id="@+id/flower_3"
            android:layout_width="103dp"
            android:layout_height="104dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="240dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="43dp"
            android:background="@drawable/jasmine_1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground" />

    </RelativeLayout>

    <!-- widget box -->
    <RelativeLayout
        android:id="@+id/widget_box"
        android:layout_width="346dp"
        android:layout_height="117dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="29dp"
        android:background="@drawable/rectangle_4"
        app:layout_constraintTop_toBottomOf="@id/about_flower"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- recent article -->

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="26dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintTop_toBottomOf="@id/widget_box"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recent_arti"
                android:textAppearance="@style/recent_arti"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/article_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="true"
                android:nestedScrollingEnabled="false"
                android:padding="8dp" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
